# colosseum-agent-hackathon

./: .deployment-summary.json  .devnet-deployment.json  .gitignore  .test-tokens.json  Anchor.toml  Cargo.toml  DEMO.md  README.md
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/waitlist/[code]/: route.ts
app/src/app/api/waitlist/agent/: route.ts
app/src/app/app/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/faucet/: page.tsx
app/src/app/waitlist/: page.tsx
app/src/components/providers/: WalletProvider.tsx
app/src/idl/: legasi_lending.json
app/src/lib/: legasi.ts
docs/: AGENT_QUICKSTART.md  ARCHITECTURE.md  CIRCLE_INTEGRATION.md  DEVNET_DEPLOYMENT.md  JUDGE_DEMO.md  SECURITY.md  SUBMISSION_CHECKLIST.md
programs/legasi-core/: Cargo.toml
programs/legasi-core/src/: constants.rs  errors.rs  events.rs  lib.rs  market.rs  state.rs
programs/legasi-credit/: Cargo.toml
programs/legasi-credit/src/: lib.rs
programs/legasi-flash/: Cargo.toml
programs/legasi-flash/src/: lib.rs
programs/legasi-gad/: Cargo.toml
programs/legasi-gad/src/: lib.rs
programs/legasi-lending/: Cargo.toml
programs/legasi-lending/src/: lib.rs  x402.rs
programs/legasi-leverage/: Cargo.toml
programs/legasi-leverage/src/: lib.rs
programs/legasi-lp/: Cargo.toml
programs/legasi-lp/src/: lib.rs
programs/legasi-staking/: Cargo.toml
programs/legasi-staking/src/: lib.rs
scripts/: create-fresh-tokens.ts  deploy-devnet.sh  init-borrowable.ts  init-cbbtc.ts  init-circle-usdc.ts  init-devnet.ts  init-lending-vault.ts  init-lp-full.ts  init-lp-pool.ts  init-price-feeds.ts  init-protocol.ts  mint-to-user.ts  test-borrow-repay.ts  test-e2e.ts  test-flash-loan.ts
sdk/: README.md  package-lock.json  package.json
sdk/examples/: agent-with-x402.ts  basic-usage.ts
sdk/src/: constants.ts  index.ts  leverage.ts  types.ts
skill/legasi-lending/: README.md  SKILL.md
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1770240608785160  MANIFEST-000021
tests/: legasi.ts
video/: package-lock.json  package.json  render-full.sh  render.sh  tsconfig.json
video/public/: concat_list.txt  generate-click.js  generate-glitch-sound.js  generate-scifi.js  generate-sounds.js  generate-tv-static.js
video/src/: LegasiVideo.tsx  LegasiVideo.tsx.backup-v52  Root.tsx  config.ts
video/src/scenes/: CTA.tsx  Demo.tsx  Intro.tsx  Problem.tsx  Scene1Hook.tsx  Scene2Problem.tsx  Scene3Solution.tsx  Scene4AppDemo.tsx  Scene5Code.tsx  Scene6CTA.tsx  SceneBouliche.tsx  Solution.tsx  Tech.tsx
