[workspace]
members = [
    "programs/legasi-core",
    "programs/legasi-lending",
    "programs/legasi-gad",
    "programs/legasi-lp",
    "programs/legasi-flash",
    "programs/legasi-leverage",
    "programs/legasi-staking",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
