[workspace]
members = [
    "programs/legasi-core",
    "programs/legasi-lending",
    "programs/legasi-gad",
    "programs/legasi-lp",
    "programs/legasi-flash",
    "programs/legasi-leverage",
    # "programs/legasi-staking",  # TODO: fix seeds
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Force older blake3 without edition2024 dependency
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.0" }
