[package]
name = "legasi-core"
version = "0.1.0"
description = "Legasi Core - Shared types, state, and errors"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "legasi_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
