[package]
name = "legasi-credit"
version = "0.1.0"
description = "Legasi Credit Protocol - Agentic Credit Infrastructure"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "legasi_credit"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
