[package]
name = "legasi-lp"
version = "0.1.0"
description = "Legasi LP - Liquidity provider vault and yield tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "legasi_lp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
legasi-core = { path = "../legasi-core", features = ["cpi"] }
