[package]
name = "legasi-staking"
version = "0.1.0"
description = "Legasi Staking - Jito/Marinade auto-staking integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "legasi_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
legasi-core = { path = "../legasi-core", features = ["cpi"] }
